syntax = "proto3";

package funwheel;

option go_package = "./grpc;grpc";

service FunWheelService {
    rpc CreateWheel(CreateWheelRequest) returns (CreateWheelResponse);
    rpc AddOption(AddOptionRequest) returns (AddOptionsResponse);
    rpc SpinWheel(SpinWheelRequest) returns (SpinWheelResponse);
    rpc ViewOptions(ViewOptionsRequest) returns (ViewOptionsResponse);
}

message CreateWheelRequest {
    int64 chat_id = 1;
}

message CreateWheelResponse {
    string message = 1;
}

message AddOptionRequest {
    int64 chat_id = 1;
    string option = 2;
}

message AddOptionsResponse {
    string message = 1;
}

message SpinWheelRequest {
    int64 chat_id = 1;
}

message SpinWheelResponse {
    string result = 1;
}

message ViewOptionsRequest {
    int64 chat_id = 1;
}

message ViewOptionsResponse {
    repeated string options = 1;
}